# klister

./: .gitignore  .hlint.yaml  .travis.yml  HACKING.rst  LICENSE  README.rst  bibliography.rst  bootstrap.rkt  cabal.project  commentary.md  default.nix  extracted_results.txt  flake.nix  klister.cabal  klister.el  output.txt  package.yaml  shell-tex.nix  shell.nix  stack.yaml  toy.kl
.github/workflows/: ci.yml  hlint.yml
bootstrap/: README.md
commentary/: interleaving.md  scope-sets.md
examples/: ambiguous-kind.golden  ambiguous-kind.kl  anaphoric-if.golden  anaphoric-if.kl  bool.golden  bool.kl  bound-identifier.golden  bound-identifier.kl  bound-vs-free.kl  comprehensive-data-test.kl  contract.golden  contract.kl  cooperating-match.kl  custom-literals-test.golden  custom-literals-test.kl  custom-literals.kl  custom-module-test.golden  custom-module-test.kl  custom-module.kl  data-macro.kl  data-syntax-demo.kl  datatype-import.golden  datatype-import.kl  datatype-macro.golden  datatype-macro.kl  datatypes.golden  datatypes.kl  deep-patterns.golden  deep-patterns.kl  define-syntax-rule-test.golden  define-syntax-rule-test.kl  define-syntax-rule.golden  define-syntax-rule.kl  defun-test.golden  defun-test.kl  defun.golden  defun.kl  defuns-test.golden  defuns-test.kl  defuns.golden  (+170 more)
examples/failing-examples/: bound-vs-free.golden  bound-vs-free.kl  incorrect-context.golden  incorrect-context.kl  keyword-used-incorrectly.golden  keyword-used-incorrectly.kl  wrong-keyword.golden  wrong-keyword.kl
examples/non-examples/: another-type-error.kl  bad-lexical-env.golden  bad-lexical-env.kl  circular-1.golden  circular-1.kl  circular-2.golden  circular-2.kl  error.golden  error.kl  import-phase.golden  import-phase.kl  kind-occurs-check.golden  kind-occurs-check.kl  missing-import.golden  missing-import.kl  no-case-matched.golden  no-case-matched.kl  no-type-case-matched.golden  no-type-case-matched.kl  type-errors.golden  type-errors.kl  type-occurs-check.golden  type-occurs-check.kl
examples/non-examples/stack-traces/: error-in-arg.golden  error-in-arg.kl  error-in-bind-head.golden  error-in-bind-head.kl  error-in-bind-tail.golden  error-in-bind-tail.kl  error-in-case-constructor.golden  error-in-case-constructor.kl  error-in-cons-head.golden  error-in-cons-head.kl  error-in-constructor.golden  error-in-constructor.kl  error-in-let.golden  error-in-let.kl  error-in-list.golden  error-in-list.kl  error-in-pure-macro.golden  error-in-pure-macro.kl  in-arg-error.golden  in-arg-error.kl
examples/non-examples/type-errors/: not-a-function.golden  not-a-function.kl
repl/: Main.hs
src/: Alpha.hs  Binding.hs  CEKEvaluator.hs  Core.hs  Datatype.hs  Debugger.hs  Env.hs  Evaluator.hs  Expander.hs  Kind.hs  KlisterPath.hs  Main.hs  Module.hs  ModuleName.hs  Parser.hs  PartialCore.hs  PartialType.hs  Phase.hs  Pretty.hs  Schedule.hs  Scope.hs  ScopeCheck.hs  ScopeCheck.lhs  ScopeSet.hs  ShortShow.hs  Signals.hs  SplitCore.hs  SplitType.hs  Syntax.hs  Type.hs  Unique.hs  Value.hs  World.hs
src/Binding/: Info.hs
src/Control/Lens/: IORef.hs
src/Core/: Builder.hs
src/Expander/: DeclScope.hs  Error.hs  Monad.hs  Primitives.hs  Syntax.hs  TC.hs  Task.hs
src/Parser/: Command.hs  Common.hs
src/Pretty/: Renumber.hs
src/ScopeCheck/: .gitignore  Evidence.lhs
src/Syntax/: Lexical.hs  SrcLoc.hs  Syntax.hs
src/Type/: Context.hs
src/Util/: Key.hs  Set.hs  Store.hs
stdlib/: bool.kl  builtins.kl  datatype-macro.kl  defun.kl  fixnums.kl  list.kl  n-ary-app.kl  optional-parens-datatype.kl  optional-parens-primitives.kl  optional-parens.kl  prelude.kl  quasiquote.kl
stuck-macros/: Main.hs
tests/: Golden.hs  MiniTests.hs  Test.hs
