cabal-version: 2.2

name:           klister
version:        0.1
homepage:       https://github.com/gelisam/klister#readme
bug-reports:    https://github.com/gelisam/klister/issues
author:         David Christiansen <david@davidchristiansen.dk>,  Samuel Gélineau <gelisam@gmail.com>
maintainer:     David Christiansen <david@davidchristiansen.dk>,  Samuel Gélineau <gelisam@gmail.com>
license:        BSD-3-Clause
license-file:   LICENSE
tested-with:    GHC==8.6.5, GHC==8.8.4, GHC==8.10.2, GHC==9.0.1
build-type:     Simple
data-files:
    stdlib/defun.kl
    stdlib/list.kl
    stdlib/n-ary-app.kl
    stdlib/optional-parens.kl
    stdlib/prelude.kl
    stdlib/quasiquote.kl

source-repository head
  type: git
  location: https://github.com/gelisam/klister

common deps
  build-depends:
    base                 >= 4.12.0 && < 4.16,
    bifunctors           >= 5.5.5 && < 5.6,
    containers           >= 0.6 && < 0.7,
    directory            >= 1.3.3 && < 1.4,
    exceptions,
    extra                >= 1.6.18 && < 1.8,
    filepath             >= 1.4.2 && < 1.5,
    lens                 >= 4.17.1 && < 5.2,
    megaparsec           >= 7.0.5 && < 9.3,
    mtl                  >= 2.2.2 && < 2.3,
    prettyprinter        >= 1.2 && < 1.8,
    text                 ^>= 1.2,
    transformers         ^>= 0.5

library
  import: deps
  exposed-modules:
      Alpha
      Binding
      Binding.Info
      Control.Lens.IORef
      Core
      Core.Builder
      Datatype
      Env
      Evaluator
      Expander
      Expander.DeclScope
      Expander.Error
      Expander.Monad
      Expander.Primitives
      Expander.Syntax
      Expander.Task
      Expander.TC
      Kind
      KlisterPath
      Module
      ModuleName
      Parser
      Parser.Command
      Parser.Common
      PartialCore
      PartialType
      Phase
      Pretty
      Scope
      ScopeSet
      ShortShow
      SplitCore
      SplitType
      Syntax
      Syntax.Lexical
      Syntax.SrcLoc
      Type
      Type.Context
      Unique
      Value
      World
  other-modules:
      Paths_klister
  hs-source-dirs:
      src
  ghc-options: -Wall
  default-language: Haskell2010

executable klister
  import: deps
  main-is: Main.hs
  other-modules:
      Paths_klister
  hs-source-dirs:
      repl
  ghc-options: -Wall
  build-depends:
    optparse-applicative >= 0.14 && < 0.18,
    klister
  default-language: Haskell2010

test-suite klister-tests
  import: deps
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Golden
      Paths_klister
  hs-source-dirs:
      tests
  ghc-options: -Wall
  build-depends:
    call-stack ^>= 0.1,
    hedgehog ^>= 1.0,
    klister,
    silently ^>= 1.2,
    tasty ^>= 1.2,
    tasty-golden ^>= 2.3,
    tasty-hedgehog ^>= 1.0,
    tasty-hunit ^>= 0.10
  default-language: Haskell2010
