cabal-version: 2.2

name:           klister
version:        0.1
homepage:       https://github.com/gelisam/klister#readme
bug-reports:    https://github.com/gelisam/klister/issues
author:         David Christiansen <david@davidchristiansen.dk>,  Samuel Gélineau <gelisam@gmail.com>
maintainer:     David Christiansen <david@davidchristiansen.dk>,  Samuel Gélineau <gelisam@gmail.com>
license:        BSD-3-Clause
license-file:   LICENSE
tested-with:    GHC==9.2.5, GHC==9.4, GHC==9.6
build-type:     Simple
data-files:
    stdlib/defun.kl
    stdlib/list.kl
    stdlib/n-ary-app.kl
    stdlib/optional-parens.kl
    stdlib/prelude.kl
    stdlib/quasiquote.kl

source-repository head
  type: git
  location: https://github.com/gelisam/klister

Flag KDebug
    Description: Enable debug support for klister interpreter
    Manual: True
    Default: False

common deps
  build-depends:
    base                 >= 4.14.0 && < 5,
    bifunctors           >= 5.5.5 && < 5.7,
    containers           >= 0.6 && < 0.7,
    unordered-containers >= 0.2.15 && < 3,
    hashable,
    directory            >= 1.3.3 && < 1.4,
    exceptions,
    extra                >= 1.6.18 && < 1.8,
    filepath             >= 1.4.2 && < 1.5,
    lens                 >= 4.17.1 && < 5.3,
    megaparsec           >= 7.0.5 && < 9.7,
    mtl                  >= 2.2.2 && < 2.4,
    prettyprinter        >= 1.2 && < 1.8,
    text                 >= 1.2,
    transformers         ^>= 0.6

common flags
  if flag(KDebug)
    CPP-Options: -DKDEBUG

library
  import: deps
        , flags
  exposed-modules:
      Alpha
      Binding
      Binding.Info
      Control.Lens.IORef
      Core
      Core.Builder
      Debugger
      Datatype
      Env
      Evaluator
      Expander
      Expander.DeclScope
      Expander.Error
      Expander.Monad
      Expander.Primitives
      Expander.Syntax
      Expander.Task
      Expander.TC
      Kind
      KlisterPath
      Module
      ModuleName
      Parser
      Parser.Command
      Parser.Common
      PartialCore
      PartialType
      Phase
      Pretty
      Scope
      ScopeSet
      ShortShow
      SplitCore
      SplitType
      Syntax
      Syntax.Syntax
      Syntax.Lexical
      Syntax.SrcLoc
      Type
      Type.Context
      Unique
      Util.Key
      Util.Store
      Util.Set
      Value
      World
  other-modules:
      Paths_klister
  hs-source-dirs:
      src
  ghc-options: -Wall
  default-language: Haskell2010

executable klister
  import: deps
  main-is: Main.hs
  other-modules:
      Paths_klister
  hs-source-dirs:
      repl
  ghc-options: -Wall
  build-depends:
    optparse-applicative >= 0.14 && < 0.19,
    klister
  default-language: Haskell2010

test-suite klister-tests
  import: deps
        , flags
  type: exitcode-stdio-1.0
  main-is: Test.hs
  other-modules:
      Golden
      MiniTests
      Paths_klister
  hs-source-dirs:
      tests
  ghc-options: -Wall
  build-depends:
    call-stack ^>= 0.4.0,
    hedgehog >= 1.2 && < 1.5,
    klister,
    silently ^>= 1.2,
    tasty ^>= 1.4,
    tasty-golden ^>= 2.3,
    tasty-hedgehog >= 1.4 && < 1.5,
    tasty-hunit ^>= 0.10
  default-language: Haskell2010
